tests/sksl/errors/CanExitWithoutReturningValue.glsl
### Compilation failed:

error: 8: function 'if_only' can exit without returning a value
error: 9: function 'return_on_if_but_not_else' can exit without returning a value
error: 10: function 'return_on_else_but_not_if' can exit without returning a value
error: 12: function 'for_with_conditional_return' can exit without returning a value
error: 13: function 'for_with_conditional_break' can exit without returning a value
error: 14: function 'for_with_conditional_continue' can exit without returning a value
error: 16: function 'bad_if_else_chain' can exit without returning a value
error: 29: function 'conditional_inside_do_loop' can exit without returning a value
error: 35: function 'switch_empty' can exit without returning a value
error: 39: function 'switch_with_no_default' can exit without returning a value
error: 46: function 'switch_with_break' can exit without returning a value
error: 54: function 'switch_with_continue' can exit without returning a value
error: 62: function 'switch_with_fallthrough_off_bottom' can exit without returning a value
error: 70: function 'switch_with_conditional_break' can exit without returning a value
error: 78: function 'switch_with_conditional_continue' can exit without returning a value
error: 86: function 'switch_with_conditional_if_then_return' can exit without returning a value
error: 93: function 'switch_with_conditional_break_then_fallthrough' can exit without returning a value
17 errors
